[build-system]
requires = [
    "setuptools>=61.0",
    "tomlkit",
]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "gpibtool"
version = "1!0.0.1784686915"
description = "Common functions for GPIB control"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
license = "ISC"
dependencies = []
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/gpibtool"

[project.scripts]
gpibtool = "gpibtool.gpibtool:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
gpibtool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["asserttool>=1!0.0.1784686069", "click-auto-help>=1!0.0.1784680961", "clicktool>=1!0.0.1784686757", "eprint>=1!0.0.1784682565", "globalverbose>=1!0.0.1784686617", "mptool>=1!0.0.1784685843", "pyvisa", "pyserial", "sh"]
dependencies-git = [
    "asserttool @ git+https://git@github.com/jakeogh/asserttool",
    "bnftool @ git+https://git@github.com/jakeogh/bnftool",
    "click-auto-help @ git+https://git@github.com/jakeogh/click-auto-help",
    "clicktool @ git+https://git@github.com/jakeogh/clicktool",
    "eprint @ git+https://git@github.com/jakeogh/eprint",
    "globalverbose @ git+https://git@github.com/jakeogh/globalverbose",
    "mptool @ git+https://git@github.com/jakeogh/mptool",
    "pyvisa",
    "pyserial",
    "sh",
    "stdiotool @ git+https://git@github.com/jakeogh/stdiotool",
]
index-urls = [
    "jakeogh.github.io",
    "pip-index",
]
